# adb-utilites

./: .clang-format  .gitignore  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  cmake_install.cmake  compile_commands.json  default_11886151691011127373_0.profraw  main.cpp
.github/workflows/: ci-tests.yml  pre-commit.yml
html/: doxygen.css  index.html
latex/: doxygen.sty  longtable_doxygen.sty  refman.tex
src/: main.cpp
